Streamlines native vs pandoc templates

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <head>
         <meta charset="utf-8">
 
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+        <title>reveal.js – The HTML Presentation Framework</title>
+
+        <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+        <meta name="author" content="Hakim El Hattab">
+
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
@@ -33,14 +38,15 @@
 
         <div class="reveal">
 
-            <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
+
                 <section data-markdown="md/slides.md"
                     data-separator="^---\n"
-                    data-vertical="^--"
+                    data-vertical="^--\n"
                     data-notes="^Note:"
                     data-charset="utf-8">
                 </section>
+
             </div>
 
         </div>
@@ -62,13 +68,12 @@
 
                 // Optional reveal.js plugins
                 dependencies: [
-                    { src: 'js/classList.js', condition: function() { return !document.body.classList; } },
+                    { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
                     { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
                     { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-                    { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad();  }  },
+                    { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad();   }   },
                     { src: 'plugin/zoom-js/zoom.js', async: true },
-                    { src: 'plugin/notes/notes.js', async: true },
-                    { src: 'plugin/title.js', async: true }
+                    { src: 'plugin/notes/notes.js', async: true }
                 ]
             });
 
