--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
                 progress: true,
                 history: true,
                 center: true,
+                width: "100%",
+                height: 700,
 
                 transition: 'slide', // none/fade/slide/convex/concave/zoom
 
